--- a/styling/stylesheet.css
+++ b/styling/stylesheet.css
@@ -44,9 +44,9 @@ body {
 }
     
 #map {
-    width: 50%;
-    height: 70%;
-    margin: 100px auto 30px auto;
+    width: 80%;
+    height: 80%;
+    margin: 100px -100px 30px auto;
 }
 
 #info {
